# leetcode_practice

./: .gitignore  78-subset.cpp  CMakeLists.txt  Readme.md  main.cpp  test.cpp  test1.cpp
BasicAlgorithm/: CMakeLists.txt
BasicAlgorithm/BinarySearch/: 153-find-minimum-in-rotated-sorted-array.cpp  154-find-minimum-in-rotated-sorted-array-ii.cpp  278-first-bad-version.cpp  33-search-in-rotated-sorted-array.cpp  35-search-insert-position.cpp  61-search-for-range.cpp  704-binary-search.cpp  74-search-a-2d-matrix.cpp  81-search-in-rotated-sorted-array-ii.cpp  Binary_Search_Key.cpp
BasicAlgorithm/DynamicProgramming/: 120-triangle.cpp  322-coin-change.cpp  45-jump-game-ii.cpp  55-jump-game.cpp  62-unique-paths.cpp  63-unique-paths-ii.cpp  64-minimum-path-sum.cpp  70-Climbing-Stairs.cpp  DP_Key.cpp  Lintcode-125-backpack-ii.cpp  Lintcode-92-backpack.cpp
BasicAlgorithm/SortAlgorithm/: Sort_Algorithms.cpp  Sort_Key.cpp
CodingInterview/: CMakeLists.txt  Jian-37-serialize-binary-trees.cpp  Jian-38-string-permutation.cpp  Jian-42-max-sum-of-continous-subarray.cpp  Readme.md
DataStructure/: CMakeLists.txt
DataStructure/BinaryTree/: 102-binary-tree-level-order-traversal.cpp  103-binary-tree-zigzag-level-order-traversal.cpp  104-maximum-depth-of-binary-tree.cpp  107-binary-tree-level-order-traversal-ii.cpp  110-balanced-binary-tree.cpp  124-binary-tree-maximum-path-sum.cpp  236-lowest-common-ancestor-of-a-binary-tree.cpp  701-insert-into-a-binary-search-tree.cpp  98-validate-binary-search-tree.cpp  divide-conquer.cpp  tree-traversal.cpp
DataStructure/Graph/: 743-Network-Delay-Time.cpp  ShortestPath.cpp
DataStructure/LinkedList/: 138-copy-list-with-random-pointer.cpp  141-linked-list-cycle.cpp  142-linked-list-cycle-ii.cpp  143-reorder-list.cpp  148-sort-list.cpp  206-reverse-linked-list.cpp  21-merge-two-sorted-lists.cpp  234-palindrome-linked-list.cpp  82-remove-duplicates-from-sorted-list-ii.cpp  83-remove-duplicates-from-sorted-list.cpp  86-partition-list.cpp  92-reverse-linked-list-ii.cpp  List_Key.cpp
InterviewProblem/: CMakeLists.txt
InterviewProblem/Alibaba/: A-Problem1.cpp  A-Problem2.cpp  Interview17-14-smallest-k-LCCI.cpp  email_design.cpp
InterviewProblem/Baidu/: B-Problem1.cpp  B-Problem2.cpp  B-Problem3.cpp
InterviewProblem/ByteDance/: 160-intersection-of-two-linked-lists.cpp  41-first-missing-positive.cpp  53-maximum-subarray.cpp  543-diameter-of-binarytree.cpp  560-subarray-sum-equals-k.cpp
InterviewProblem/Ctrip/: CProblem1.cpp  CProblem2.cpp  Test1.cpp  Test2.cpp  Test3.cpp
InterviewProblem/DJI/: DProblem1.cpp  DProblem2.cpp  DProblem3.cpp
InterviewProblem/Huawei/: 406-Queue-Reconstruction-by-Height.cpp  H-Problem1.cpp  H-Problem2.cpp  H-Problem3.cpp  Htest1.cpp  Htest2.cpp
InterviewProblem/Iflytek/: Problem1.cpp  Problem2.cpp  Problem3.cpp  Problem4.cpp
InterviewProblem/JingDong/: J-Problem1.cpp  J-Problem2.cpp  J-Problem3.cpp
InterviewProblem/KuaiShou/: 862-Shortest-Subarray-with-Sum-at-Least-K.cpp
InterviewProblem/M-Geeker/: M-Problem1.cpp  M-Problem2.cpp  M-Problem3.cpp
InterviewProblem/NetEase/: N-Problem1.cpp  N-Problem2.cpp  N-Problem3.cpp  N-Problem4.cpp  NN-Problem1.cpp  NN-Problem2.cpp  NN-Problem3.cpp  NN-Problem4.cpp  NProblem1.cpp  NProblem2.cpp  NProblem3.cpp  NProblem4.cpp
InterviewProblem/PDD/: 152-maximum-product-subarray.cpp  473-Matchsticks-to-Square.cpp  668-Kth-Smallest-Number-in-Multiplication-Table.cpp  P-Problem1.cpp  P-Problem2.cpp  P-Problem3.cpp  P-Problem4.cpp  PDD-Problem1.cpp  PDD-Problem2.cpp  PDD-Problem3.cpp  PDD-Problem4.cpp
InterviewProblem/PingAn/: 18-4Sum.cpp  PA-Problem1.cpp  PA-Problem2.cpp
InterviewProblem/ShenXinFu/: Shen-Problem1.cpp  Shen-Problem2.cpp
InterviewProblem/Shopee/: 1299-Replace-Elements-with-Greatest-Element-on-Right-Side.cpp  405-Convert-a-Number-to-Hexadecimal.cpp  S-Problem1.cpp  S-Problem2.cpp  S-Problem3.cpp
InterviewProblem/Tencent/: T-test1.cpp
InterviewProblem/VMware/: V-Problem1.cpp  V-Problem2.cpp  V-Problem3.cpp  V-Problem4.cpp
InterviewProblem/YuanFuDao/: 128-Longest-Consecutive-Sequence.cpp  179-largest-number.cpp  545-boundary-of-binary-tree.cpp  918-maximum-sum-cicular-subarray.cpp  POJ1050-to-the-max.cpp  Yuan-Problem1.cpp  Yuan-Problem2.cpp  Yuan-Problem3.cpp
InterviewProblem/eBay/: e-Problem1.cpp  e-Problem2.cpp  e-Problem3.cpp
KnowledgePlayGround/: CMakeLists.txt
KnowledgePlayGround/DesignPattern/: Singleton.cpp
KnowledgePlayGround/OperatingSystem/: 146-LRU-cache.cpp
LeetcodeCard/: CMakeLists.txt
LeetcodeCard/BTree/: BFS_Traversal.cpp  midTraversal.cpp  pathSum.cpp  postTraversal.cpp  preTraversal.cpp  symmetricTree.cpp
LeetcodeCard/DP/: CMakeLists.txt
LeetcodeCard/DP/LinearDP/Single-Sequence/: 300-Longest-Increasing-Subsequence.cpp  354-Russian-Doll-Envelopes.cpp  53-Maximum-Subarray.cpp  673-Number-of-Longest-Increasing-Subsequence.cpp  918-Maximum-Sum-Circular-Subarray.cpp  IV17-24-Max-Submatrix.cpp  Sequence_Key.cpp
LeetcodeCard/Tencent/: T-sum-of-two-numbers.cpp
Miscellaneous/: 28-strStr.cpp  test.cpp
miscellaneous/: main.cpp  test.cpp
