
add_executable(Binary_Search_Key BinarySearch/Binary_Search_Key.cpp)
add_executable(704-binary-search BinarySearch/704-binary-search.cpp)
add_executable(61-search-for-range BinarySearch/61-search-for-range.cpp)
add_executable(35-search-insert-position BinarySearch/35-search-insert-position.cpp)
add_executable(74-search-a-2d-matrix BinarySearch/74-search-a-2d-matrix.cpp)
add_executable(278-first-bad-version BinarySearch/278-first-bad-version.cpp)