
add_executable(Binary_Search_Key BinarySearch/Binary_Search_Key.cpp)
add_executable(704-binary-search BinarySearch/704-binary-search.cpp)
add_executable(61-search-for-range BinarySearch/61-search-for-range.cpp)
add_executable(35-search-insert-position BinarySearch/35-search-insert-position.cpp)
add_executable(74-search-a-2d-matrix BinarySearch/74-search-a-2d-matrix.cpp)
add_executable(278-first-bad-version BinarySearch/278-first-bad-version.cpp)
add_executable(153-find-minimum-in-rotated-sorted-array BinarySearch/153-find-minimum-in-rotated-sorted-array.cpp)
add_executable(154-find-minimum-in-rotated-sorted-array-ii BinarySearch/154-find-minimum-in-rotated-sorted-array-ii.cpp)
add_executable(33-search-in-rotated-sorted-array BinarySearch/33-search-in-rotated-sorted-array.cpp)
add_executable(81-search-in-rotated-sorted-array-ii BinarySearch/81-search-in-rotated-sorted-array-ii.cpp)

add_executable(Sort_Key SortAlgorithm/Sort_Key.cpp)
add_executable(Sort_Algorithms SortAlgorithm/Sort_Algorithms.cpp)