
add_executable(Binary_Search_Key BinarySearch/Binary_Search_Key.cpp)
add_executable(704-binary-search BinarySearch/704-binary-search.cpp)
add_executable(61-search-for-range BinarySearch/61-search-for-range.cpp)
add_executable(35-search-insert-position BinarySearch/35-search-insert-position.cpp)
add_executable(74-search-a-2d-matrix BinarySearch/74-search-a-2d-matrix.cpp)
add_executable(278-first-bad-version BinarySearch/278-first-bad-version.cpp)
add_executable(153-find-minimum-in-rotated-sorted-array BinarySearch/153-find-minimum-in-rotated-sorted-array.cpp)
add_executable(154-find-minimum-in-rotated-sorted-array-ii BinarySearch/154-find-minimum-in-rotated-sorted-array-ii.cpp)
add_executable(33-search-in-rotated-sorted-array BinarySearch/33-search-in-rotated-sorted-array.cpp)
add_executable(81-search-in-rotated-sorted-array-ii BinarySearch/81-search-in-rotated-sorted-array-ii.cpp)

add_executable(Sort_Key SortAlgorithm/Sort_Key.cpp)
add_executable(Sort_Algorithms SortAlgorithm/Sort_Algorithms.cpp)

add_executable(DP_Key DynamicProgramming/DP_Key.cpp)
add_executable(120-triangle DynamicProgramming/120-triangle.cpp)
add_executable(64-minimum-path-sum DynamicProgramming/64-minimum-path-sum.cpp)
add_executable(62-unique-paths DynamicProgramming/62-unique-paths.cpp)
add_executable(63-unique-paths-ii DynamicProgramming/63-unique-paths-ii.cpp)
add_executable(322-coin-change DynamicProgramming/322-coin-change.cpp)
add_executable(Lintcode-92-backpack DynamicProgramming/Lintcode-92-backpack.cpp)
add_executable(Lintcode-125-backpack-ii DynamicProgramming/Lintcode-125-backpack-ii.cpp)