
add_executable(tree-traversal BinaryTree/tree-traversal.cpp)
add_executable(divide-conquer BinaryTree/divide-conquer.cpp)

add_executable(104-maximum-depth-of-binary-tree BinaryTree/104-maximum-depth-of-binary-tree.cpp)
add_executable(110-balanced-binary-tree BinaryTree/110-balanced-binary-tree.cpp)
add_executable(124-binary-tree-maximum-path-sum BinaryTree/124-binary-tree-maximum-path-sum.cpp)
add_executable(236-lowest-common-ancestor-of-a-binary-tree BinaryTree/236-lowest-common-ancestor-of-a-binary-tree.cpp)
add_executable(102-binary-tree-level-order-traversal BinaryTree/102-binary-tree-level-order-traversal.cpp)