
add_executable(tree-traversal BinaryTree/tree-traversal.cpp)
add_executable(divide-conquer BinaryTree/divide-conquer.cpp)

add_executable(104-maximum-depth-of-binary-tree BinaryTree/104-maximum-depth-of-binary-tree.cpp)
add_executable(110-balanced-binary-tree BinaryTree/110-balanced-binary-tree.cpp)
add_executable(124-binary-tree-maximum-path-sum BinaryTree/124-binary-tree-maximum-path-sum.cpp)
add_executable(236-lowest-common-ancestor-of-a-binary-tree BinaryTree/236-lowest-common-ancestor-of-a-binary-tree.cpp)
add_executable(102-binary-tree-level-order-traversal BinaryTree/102-binary-tree-level-order-traversal.cpp)
add_executable(107-binary-tree-level-order-traversal-ii BinaryTree/107-binary-tree-level-order-traversal-ii.cpp)
add_executable(103-binary-tree-zigzag-level-order-traversal BinaryTree/103-binary-tree-zigzag-level-order-traversal.cpp)
add_executable(98-validate-binary-search-tree BinaryTree/98-validate-binary-search-tree.cpp)
add_executable(701-insert-into-a-binary-search-tree BinaryTree/701-insert-into-a-binary-search-tree.cpp)


add_executable(List_Key LinkedList/List_Key.cpp)
add_executable(83-remove-duplicates-from-sorted-list LinkedList/83-remove-duplicates-from-sorted-list.cpp)
add_executable(82-remove-duplicates-from-sorted-list-ii LinkedList/82-remove-duplicates-from-sorted-list-ii.cpp)
add_executable(206-reverse-linked-list LinkedList/206-reverse-linked-list.cpp)
add_executable(92-reverse-linked-list-ii LinkedList/92-reverse-linked-list-ii.cpp)
add_executable(21-merge-two-sorted-lists LinkedList/21-merge-two-sorted-lists.cpp)
add_executable(86-partition-list LinkedList/86-partition-list.cpp)
add_executable(148-sort-list LinkedList/148-sort-list.cpp)
add_executable(143-reorder-list LinkedList/143-reorder-list.cpp)
add_executable(141-linked-list-cycle LinkedList/141-linked-list-cycle.cpp)
add_executable(142-linked-list-cycle-ii LinkedList/142-linked-list-cycle-ii.cpp)
add_executable(234-palindrome-linked-list LinkedList/234-palindrome-linked-list.cpp)