
add_executable(41-first-missing-positive ByteDance/41-first-missing-positive.cpp)

add_executable(Problem1 Iflytek/Problem1.cpp)
add_executable(Problem2 Iflytek/Problem2.cpp)
add_executable(Problem3 Iflytek/Problem3.cpp)
add_executable(Problem4 Iflytek/Problem4.cpp)

add_executable(M-Problem1 M-Geeker/M-Problem1.cpp)
add_executable(M-Problem2 M-Geeker/M-Problem2.cpp)
add_executable(M-Problem3 M-Geeker/M-Problem3.cpp)

add_executable(NProblem1 NetEase/NProblem1.cpp)
add_executable(NProblem2 NetEase/NProblem2.cpp)
add_executable(NProblem3 NetEase/NProblem3.cpp)
add_executable(NProblem4 NetEase/NProblem4.cpp)