
add_executable(41-first-missing-positive ByteDance/41-first-missing-positive.cpp)

add_executable(Problem1 Iflytek/Problem1.cpp)
add_executable(Problem2 Iflytek/Problem2.cpp)
add_executable(Problem3 Iflytek/Problem3.cpp)
add_executable(Problem4 Iflytek/Problem4.cpp)

add_executable(M-Problem1 M-Geeker/M-Problem1.cpp)
add_executable(M-Problem2 M-Geeker/M-Problem2.cpp)
add_executable(M-Problem3 M-Geeker/M-Problem3.cpp)

add_executable(NProblem1 NetEase/NProblem1.cpp)
add_executable(NProblem2 NetEase/NProblem2.cpp)
add_executable(NProblem3 NetEase/NProblem3.cpp)
add_executable(NProblem4 NetEase/NProblem4.cpp)

add_executable(Test1 Ctrip/Test1.cpp)
add_executable(Test2 Ctrip/Test2.cpp)
add_executable(Test3 Ctrip/Test3.cpp)
add_executable(CProblem1 Ctrip/CProblem1.cpp)
add_executable(CProblem2 Ctrip/CProblem2.cpp)

add_executable(DProblem1 DJI/DProblem1.cpp)
add_executable(DProblem2 DJI/DProblem2.cpp)
add_executable(DProblem3 DJI/DProblem3.cpp)