
add_executable(41-first-missing-positive ByteDance/41-first-missing-positive.cpp)
add_executable(160-intersection-of-two-linked-lists ByteDance/160-intersection-of-two-linked-lists.cpp)
add_executable(543-diameter-of-binarytree ByteDance/543-diameter-of-binarytree.cpp)
add_executable(560-subarray-sum-equals-k ByteDance/560-subarray-sum-equals-k.cpp)
add_executable(53-maximum-subarray ByteDance/53-maximum-subarray.cpp)

add_executable(Problem1 Iflytek/Problem1.cpp)
add_executable(Problem2 Iflytek/Problem2.cpp)
add_executable(Problem3 Iflytek/Problem3.cpp)
add_executable(Problem4 Iflytek/Problem4.cpp)

add_executable(M-Problem1 M-Geeker/M-Problem1.cpp)
add_executable(M-Problem2 M-Geeker/M-Problem2.cpp)
add_executable(M-Problem3 M-Geeker/M-Problem3.cpp)

add_executable(NProblem1 NetEase/NProblem1.cpp)
add_executable(NProblem2 NetEase/NProblem2.cpp)
add_executable(NProblem3 NetEase/NProblem3.cpp)
add_executable(NProblem4 NetEase/NProblem4.cpp)

add_executable(Test1 Ctrip/Test1.cpp)
add_executable(Test2 Ctrip/Test2.cpp)
add_executable(Test3 Ctrip/Test3.cpp)
add_executable(CProblem1 Ctrip/CProblem1.cpp)
add_executable(CProblem2 Ctrip/CProblem2.cpp)

add_executable(DProblem1 DJI/DProblem1.cpp)
add_executable(DProblem2 DJI/DProblem2.cpp)
add_executable(DProblem3 DJI/DProblem3.cpp)

add_executable(Interview17-14-smallest-k-LCCI Alibaba/Interview17-14-smallest-k-LCCI.cpp)
add_executable(A-Problem1 Alibaba/A-Problem1.cpp)
add_executable(A-Problem2 Alibaba/A-Problem2.cpp)

add_executable(Yuan-Problem1 YuanFuDao/Yuan-Problem1.cpp)
add_executable(Yuan-Problem2 YuanFuDao/Yuan-Problem2.cpp)
add_executable(Yuan-Problem3 YuanFuDao/Yuan-Problem3.cpp)
add_executable(545-boundary-of-binary-tree YuanFuDao/545-boundary-of-binary-tree.cpp)
add_executable(POJ1050-to-the-max YuanFuDao/POJ1050-to-the-max.cpp)
add_executable(918-maximum-sum-cicular-subarray YuanFuDao/918-maximum-sum-cicular-subarray.cpp)
add_executable(128-Longest-Consecutive-Sequence YuanFuDao/128-Longest-Consecutive-Sequence.cpp)
add_executable(179-largest-number YuanFuDao/179-largest-number.cpp)

add_executable(Shen-Problem1 ShenXinFu/Shen-Problem1.cpp)
add_executable(Shen-Problem2 ShenXinFu/Shen-Problem2.cpp)

add_executable(S-Problem1 Shopee/S-Problem1.cpp)
add_executable(S-Problem2 Shopee/S-Problem2.cpp)
add_executable(S-Problem3 Shopee/S-Problem3.cpp)
add_executable(1299-Replace-Elements-with-Greatest-Element-on-Right-Side Shopee/1299-Replace-Elements-with-Greatest-Element-on-Right-Side.cpp)
add_executable(405-Convert-a-Number-to-Hexadecimal Shopee/405-Convert-a-Number-to-Hexadecimal.cpp)

add_executable(P-Problem1 PDD/P-Problem1.cpp)
add_executable(P-Problem2 PDD/P-Problem2.cpp)
add_executable(P-Problem3 PDD/P-Problem3.cpp)
add_executable(P-Problem4 PDD/P-Problem4.cpp)
add_executable(152-maximum-product-subarray PDD/152-maximum-product-subarray.cpp)
add_executable(668-Kth-Smallest-Number-in-Multiplication-Table PDD/668-Kth-Smallest-Number-in-Multiplication-Table.cpp)
add_executable(473-Matchsticks-to-Square PDD/473-Matchsticks-to-Square.cpp)

add_executable(H-Problem1 Huawei/H-Problem1.cpp)
add_executable(H-Problem2 Huawei/H-Problem2.cpp)
add_executable(H-Problem3 Huawei/H-Problem3.cpp)
add_executable(Htest1 Huawei/Htest1.cpp)
add_executable(Htest2 Huawei/Htest2.cpp)
add_executable(406-Queue-Reconstruction-by-Height Huawei/406-Queue-Reconstruction-by-Height.cpp)

add_executable(B-Problem1 Baidu/B-Problem1.cpp)
add_executable(B-Problem2 Baidu/B-Problem2.cpp)
add_executable(B-Problem3 Baidu/B-Problem3.cpp)

add_executable(N-Problem1 NetEase/N-Problem1.cpp)
add_executable(N-Problem2 NetEase/N-Problem2.cpp)
add_executable(N-Problem3 NetEase/N-Problem3.cpp)
add_executable(N-Problem4 NetEase/N-Problem4.cpp)
add_executable(NN-Problem1 NetEase/NN-Problem1.cpp)
add_executable(NN-Problem2 NetEase/NN-Problem2.cpp)
add_executable(NN-Problem3 NetEase/NN-Problem3.cpp)
add_executable(NN-Problem4 NetEase/NN-Problem4.cpp)

add_executable(T-test1 Tencent/T-test1.cpp)

add_executable(J-Problem1 JingDong/J-Problem1.cpp)
add_executable(J-Problem2 JingDong/J-Problem2.cpp)

add_executable(PA-Problem1 PingAn/PA-Problem1.cpp)
add_executable(PA-Problem2 PingAn/PA-Problem2.cpp)