add_executable(preTraversal BTree/preTraversal.cpp)
add_executable(midTraversal BTree/midTraversal.cpp)
add_executable(postTraversal BTree/postTraversal.cpp)
add_executable(BFS_Traversal BTree/BFS_Traversal.cpp)

add_executable(symmetricTree BTree/symmetricTree.cpp)
add_executable(pathSum BTree/pathSum.cpp)

add_executable(T-sum-of-two-numbers Tencent/T-sum-of-two-numbers.cpp)